--- a/src/i18n/ukrainian.json
+++ b/src/i18n/ukrainian.json
@@ -1,4 +1,7 @@
 {
+  "registration": "Реєстрація",
+  "login": "Логін",
+  "language": "Оберіть мову",
   "surname": "Прізвище",
   "name": "Ім'я",
   "middleName": "По-батькові",
@@ -6,7 +9,6 @@
   "phoneNumber": "Номер телефону",
   "email": "Електронна пошта",
   "code": "Код",
-
 
   "enterSurname": "Введіть ваше прізвище",
   "enterName": "Введіть ваше ім'я",
@@ -16,5 +18,14 @@
 
   "signUp": "Зареєструватився",
   "question": "Ви вже зареєстровані?",
-  "signIn": "Увійти"
+  "signIn": "Увійти",
+
+  "getCode": "Отримати код",
+  "question2": "Досі не створили акаунт?",
+
+  "fileReason": "Завантаження файлів",
+  "folderReason": "Завантаження папок"
+
+
+
 }
