--- a/src/i18n/ukrainian.json
+++ b/src/i18n/ukrainian.json
@@ -1,6 +1,7 @@
 {
   "registration": "Реєстрація",
-  "login": "Логін",
+  "login": "Авторизація",
+  "logout": "Вийти",
   "language": "Оберіть мову",
   "surname": "Прізвище",
   "name": "Ім'я",
@@ -24,7 +25,11 @@
   "question2": "Досі не створили акаунт?",
 
   "fileReason": "Завантаження файлів",
-  "folderReason": "Завантаження папок"
+  "folderReason": "Завантаження папок",
+  "sentCode": "Вам надіслано код. Перевірте ваш телефон.",
+  "noCode": "Не отримали код?",
+  "error_409": "Даний номер телефону вже зареєстрований. Увійдіть будь ласка!",
+  "error_401": "Ви ввели неіснуючий номер.Перевірте будь ласка ще раз!"
 
 
 
