--- a/src/i18n/ukrainian.json
+++ b/src/i18n/ukrainian.json
@@ -24,12 +24,13 @@
   "getCode": "Отримати код",
   "question2": "Досі не створили акаунт?",
 
-  "fileReason": "Завантаження файлів",
-  "folderReason": "Завантаження папок",
   "sentCode": "Вам надіслано код. Перевірте ваш телефон.",
   "noCode": "Не отримали код?",
   "error_409": "Даний номер телефону вже зареєстрований. Увійдіть будь ласка!",
-  "error_401": "Ви ввели неіснуючий номер.Перевірте будь ласка ще раз!"
+  "error_401": "Ви ввели неіснуючий номер.Перевірте будь ласка ще раз!",
+
+  "uploadFile": "Завантажити зображення/документи",
+  "uploadFolder": "Завантажити обстеження/диск"
 
 
 
