improving styles with css

--- a/src/i18n/ukrainian.json
+++ b/src/i18n/ukrainian.json
@@ -2,6 +2,7 @@
   "registration": "Реєстрація",
   "login": "Авторизація",
   "logout": "Вийти",
+  "send": "Надіслати відповіді",
   "language": "Оберіть мову",
   "surname": "Прізвище",
   "name": "Ім'я",
@@ -10,6 +11,9 @@
   "phoneNumber": "Номер телефону",
   "email": "Електронна пошта",
   "code": "Код",
+
+  "questionnaire": "Опитування",
+  "upload": "Завантаження файлів",
 
   "enterSurname": "Введіть ваше прізвище",
   "enterName": "Введіть ваше ім'я",
@@ -27,7 +31,8 @@
   "sentCode": "Вам надіслано код. Перевірте ваш телефон.",
   "noCode": "Не отримали код?",
   "error_409": "Даний номер телефону вже зареєстрований. Увійдіть будь ласка!",
-  "error_401": "Ви ввели неіснуючий номер.Перевірте будь ласка ще раз!",
+  "error_401": "Ви ввели неправильні дані.Перевірте будь ласка ще раз!",
+  "successLogin": "Ви успішно увійшли в систему",
 
   "uploadFile": "Завантажити зображення/документи",
   "uploadFolder": "Завантажити обстеження/диск"
