--- a/src/i18n/english.json
+++ b/src/i18n/english.json
@@ -2,6 +2,7 @@
   "registration": "Registration",
   "login": "Login",
   "logout": "Log out",
+  "send": "Send answers",
   "language": "Select language",
   "surname": "Surname",
   "name": "Name",
@@ -10,6 +11,9 @@
   "phoneNumber": "Phone number",
   "email": "Email",
   "code": "Code",
+
+  "questionnaire": "Questionnaire",
+  "upload": "Files uploader",
 
   "enterSurname": "Enter your surname",
   "enterName": "Enter your name",
@@ -29,7 +33,8 @@
   "sentCode": "You have been sent a code. Check your phone.",
   "noCode": "Didn't receive a code?",
   "error_409": "This phone number was registered before. Login please!",
-  "error_401": "You have entered non-existent number.Try again!",
+  "error_401": "You have entered wrong data.Try again!",
+  "successLogin": "You have successfully logged in",
 
   "uploadFile": "Upload images/documents",
   "uploadFolder": "Upload examination/disk"
