--- a/src/i18n/ukrainian.json
+++ b/src/i18n/ukrainian.json
@@ -32,6 +32,7 @@
   "noCode": "Не отримали код?",
   "error_409": "Даний номер телефону вже зареєстрований. Увійдіть будь ласка!",
   "error_401": "Ви ввели неправильні дані.Перевірте будь ласка ще раз!",
+  "error_401_code": "Ви ввели неправильний код.Перевірте будь ласка ще раз!",
   "successLogin": "Ви успішно увійшли в систему",
 
   "uploadFile": "Завантажити зображення/документи",
